--- a/src/static/css/addservice.less
+++ b/src/static/css/addservice.less
@@ -76,8 +76,9 @@
 
     label {
         display: grid;
-        grid-template-columns: auto auto;
+        grid-template-columns: min-content auto;
         gap: 24px;
+        align-items: center;
         text-align: left;
 
         .add-service-checkbox-button {
