--- a/src/static/css/layout.less
+++ b/src/static/css/layout.less
@@ -161,6 +161,7 @@
     display: grid;
     grid-template-columns: calc(464px - 80px) auto min-content;
     row-gap: 48px;
+    align-items: center;
     box-sizing: border-box;
 }
 
@@ -250,7 +251,9 @@
     .header {
         padding: 16px;
         width: 100%;
+    }
 
+    .header-navbar {
         img {
             width: 114px;
         }
@@ -291,7 +294,7 @@
         text-align: center;
 
         &>img {
-            width: 146px;
+            width: 114px;
             justify-self: center;
         }
     }
