--- a/src/static/css/user.css
+++ b/src/static/css/user.css
@@ -14,6 +14,10 @@
     gap: 24px;
 }
 
+.user-profile-edit-button-container {
+    width: auto;
+}
+
 .user-profile-modes {
     display: flex;
     justify-content: flex-start;
@@ -148,14 +152,18 @@
 
 @media screen and (max-width: 576px) {
     .user-profile-header-container {
-        flex-direction: column;
-        align-items: flex-start;
+        /* flex-direction: column; */
+        /* align-items: flex-start; */
         gap: 16px;
         margin-bottom: 20px;
     }
 
     .user-profile-subheader {
         gap: 16px;
+    }
+
+    .user-profile-edit-button-container {
+        width: min-content;
     }
 
     .user-profile-modes {
