--- a/src/static/css/layout.less
+++ b/src/static/css/layout.less
@@ -302,6 +302,8 @@
     .footer-navigation {
         flex-direction: column;
         gap: 20px;
+        width: max-content;
+        margin: 0 auto;
     }
 
     .footer-social-networks-buttons {
