--- a/src/static/css/global.css
+++ b/src/static/css/global.css
@@ -154,7 +154,7 @@ hr {
     border-radius: 32px;
     box-sizing: border-box;
     height: 48px;
-    color: #B3BBC2;
+    color: #636E8D;
 }
 
 .wide-search-container i {
