--- a/src/static/css/home.css
+++ b/src/static/css/home.css
@@ -102,7 +102,7 @@
     font-weight: 400;
     font-size: 14px;
     line-height: 14px;
-    color: #B3BBC2;
+    color: #636E8D;
     height: 48px;
     box-sizing: border-box;
 }
