--- a/src/static/css/layout.less
+++ b/src/static/css/layout.less
@@ -57,6 +57,7 @@
 .header-navbar-login-button {
     border: none;
     background: none;
+    font-family: 'Noto Sans', sans-serif;
     font-weight: 500;
     font-size: 16px;
     line-height: 16px;
