--- a/src/static/css/services.css
+++ b/src/static/css/services.css
@@ -152,12 +152,30 @@
     margin-bottom: 32px;
 }
 
+.service-title-section {
+    display: grid;
+    grid-template-columns: auto auto;
+    align-items: center;
+    justify-items: flex-start;
+    row-gap: 12px;
+    column-gap: 16px;
+}
+
 .service-title-section>a {
     display: flex;
     align-items: center;
     gap: 12px;
     text-decoration: none;
-    margin-bottom: 12px;
+}
+
+.service-title-section>button {
+    padding: 6px 8px;
+    color: #386BEE;
+    background: #F4F7FF;
+    border-radius: 12px;
+    font-size: 14px;
+    line-height: 14px;
+    cursor: pointer;
 }
 
 .service-title-section>span {
@@ -499,6 +517,68 @@
     line-height: 20px;
     color: #B3B7C1;
     cursor: pointer;
+}
+
+/* SERVICE EDIT POPUP */
+
+.service-edit-popup-container {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #FFFFFF;
+    border-radius: 24px;
+    padding: 32px 48px;
+    /*! text-align: center; */
+    z-index: 100;
+    width: 800px;
+    box-sizing: border-box;
+    display: grid;
+    gap: 24px;
+    justify-items: center;
+}
+
+
+.service-edit-info {
+    display: grid;
+    justify-self: flex-start;
+    gap: 16px;
+    width: 100%;
+}
+
+.service-edit-details {
+    display: grid;
+    justify-items: flex-start;
+    gap: 12px;
+}
+
+.service-edit-info>input {
+    border: 1px solid rgba(45, 67, 121, calc(0.6 * 0.4));
+    border-radius: 32px;
+    font-family: 'Noto Sans', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 16px;
+    color: rgba(45, 67, 121, 0.6);
+    padding: 0 20px;
+    height: 48px;
+    box-sizing: border-box;
+}
+
+.service-edit-info>textarea {
+    border: 1px solid rgba(45, 67, 121, calc(0.6 * 0.4));
+    border-radius: 32px;
+    font-family: 'Noto Sans', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 16px;
+    color: rgba(45, 67, 121, 0.6);
+    padding: 16px 20px;
+    box-sizing: border-box;
+    height: 86px;
+    resize: none;
 }
 
 /* MOBILE */
