--- a/src/static/css/categories.less
+++ b/src/static/css/categories.less
@@ -89,6 +89,25 @@
     }
 }
 
+.category-tag {
+    padding: 7px 12px;
+    background-color: #F6F7FB;
+    border-radius: 24px;
+    font-family: 'Montserrat', sans-serif;
+    font-style: normal;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 14px;
+    text-transform: uppercase;
+    color: #386BEE;
+    cursor: pointer;
+}
+
+.category-tag.active {
+    background-color: #386BEE;
+    color: #FFFFFF;
+}
+
 .categories-list-modes {
     display: flex;
     flex-direction: row;
