service edit, search fixes

--- a/src/static/css/services.css
+++ b/src/static/css/services.css
@@ -399,7 +399,7 @@
     flex-wrap: wrap;
     justify-content: center;
     gap: 12px;
-    margin-bottom: 32px;
+    margin: 32px 0;
 }
 
 .services-list-cards-container {
@@ -427,7 +427,7 @@
 
 /* SERVICE SELECTION */
 
-.service-selection-container {
+/* .service-selection-container {
     position: fixed;
     top: 10%;
     left: 0;
@@ -445,9 +445,9 @@
     animation-duration: 0.4s;
     animation-iteration-count: 1;
     animation-timing-function: ease-out;
-}
+} */
 
-@keyframes open-service-selection {
+/* @keyframes open-service-selection {
     from {
         top: 100%;
     }
@@ -455,7 +455,7 @@
     to {
         top: 10%;
     }
-}
+} */
 
 .service-selection-container hr {
     margin: 32px 0;
@@ -606,6 +606,52 @@
     font-size: 16px;
     line-height: 16px;
     color: #2D4379;
+}
+
+.service-edit-popup-add-category-popup {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 24px 32px;
+    border-radius: 24px;
+    background: white;
+    width: 600px;
+    box-sizing: border-box;
+    box-shadow: 0 0 4px gainsboro;
+    z-index: 101;
+    text-align: center;
+}
+
+.service-edit-popup-add-category-search input {
+    width: 100%;
+    padding: 16px 28px 16px 0;
+    border-bottom: 1px solid #E9EEFA;
+    color: #2D4379;
+    box-sizing: border-box;
+}
+
+.service-edit-popup-add-category-search button {
+    position: fixed;
+    float: right;
+    margin-top: 14px;
+    right: 40px;
+}
+
+.service-edit-popup-add-category-list {
+    max-height: 300px;
+    margin: 12px 0;
+    display: flex;
+    flex-wrap: wrap;
+    align-content: flex-start;
+    row-gap: 12px;
+    column-gap: 16px;
+    list-style-type: none;
+    overflow: scroll;
+}
+
+.service-edit-popup-add-category-search {
+    margin-top: 16px;
 }
 
 /* MOBILE */
