--- a/src/static/css/categories.less
+++ b/src/static/css/categories.less
@@ -101,11 +101,25 @@
     text-transform: uppercase;
     color: #386BEE;
     cursor: pointer;
+
+    &.active {
+        background-color: #386BEE;
+        color: #FFFFFF;
+    }
+
+    &>i {
+        margin-left: 8px;
+    }
 }
 
-.category-tag.active {
-    background-color: #386BEE;
-    color: #FFFFFF;
+.category-tag-add-category {
+    padding: 7px 12px;
+    background-color: #F6F7FB;
+    border-radius: 24px;
+    font-size: 12px;
+    line-height: 14px;
+    color: #386BEE;
+    cursor: pointer;
 }
 
 .categories-list-modes {
