--- a/src/static/css/services.css
+++ b/src/static/css/services.css
@@ -141,6 +141,17 @@
     border-radius: 8px;
 }
 
+.service-image-wrapper.empty {
+    width: 100%;
+    height: 280px;
+    font-size: 48px;
+    color: #636E8D;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: auto;
+}
+
 .service-info {
     display: block;
 }
@@ -185,6 +196,7 @@
     line-height: 16px;
     color: #2D4379;
     grid-row-start: 2;
+    grid-column-end: span 2;
 }
 
 .service-title-section i {
@@ -424,6 +436,21 @@
 .services-list-not-found>i {
     font-size: 120pt;
     margin-bottom: 16px;
+}
+
+.services-list-reset-button {
+    font-family: 'Montserrat', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 14px;
+    color: #636E8D;
+    cursor: pointer;
+}
+
+.services-list-reset-button>i {
+    margin-left: 6px;
+    font-size: 12px;
 }
 
 /* SERVICE SELECTION */
@@ -728,12 +755,21 @@
         /* grid-row-end: initial; */
     }
 
+    .service-image-wrapper.empty {
+        height: 160px;
+        font-size: 24px;
+    }
+
     .service-info {
         margin-bottom: 20px;
     }
 
     .service-info-header {
         margin-bottom: 24px;
+    }
+
+    .service-title-section {
+        grid-template-columns: auto;
     }
 
     .service-title-section>h1 {
@@ -743,6 +779,7 @@
     .service-title-section>span {
         font-size: 10px;
         line-height: 10px;
+        grid-column-end: initial;
     }
 
     .service-rating-section {
@@ -852,12 +889,6 @@
         gap: 16px;
     }
 
-    .service-selection-container {
-        padding: 16px 16px 36px;
-        border-top-left-radius: 22px;
-        border-top-right-radius: 22px;
-    }
-
     .service-selection-container p {
         font-size: 10px;
         /* margin-bottom: 20px; */
@@ -868,7 +899,6 @@
     }
 
     .service-selection-header>h2 {
-        margin-top: 8px;
         margin-bottom: 10px;
     }
 
