--- a/src/static/css/services.css
+++ b/src/static/css/services.css
@@ -453,6 +453,16 @@
     font-size: 12px;
 }
 
+.services-list-services-number {
+    margin: 0 auto 0 12px;
+    padding: 0 8px;
+    background: #386BEE;
+    border-radius: 32px;
+    font-size: 18px;
+    line-height: 32px;
+    color: white;
+}
+
 /* SERVICE SELECTION */
 
 /* .service-selection-container {
@@ -702,7 +712,7 @@
     row-gap: 12px;
     column-gap: 16px;
     list-style-type: none;
-    overflow: scroll;
+    overflow: auto;
 }
 
 .services-list-dropdown-no-match {
