--- a/src/static/css/ui.css
+++ b/src/static/css/ui.css
@@ -141,6 +141,22 @@
     font-size: 18px;
 }
 
+.search-submit-button {
+    float: right;
+    font-size: 18px;
+    margin-top: -32px;
+    margin-right: 18px;
+    line-height: 18px;
+    cursor: pointer;
+    position: relative;
+}
+
+.search-submit-button>i {
+    float: initial;
+    font-size: inherit;
+    margin: 0;
+}
+
 /* MOBILE */
 
 @media screen and (max-width: 576px) {
