services search fixes

--- a/src/static/css/categories.less
+++ b/src/static/css/categories.less
@@ -207,6 +207,16 @@
         }
     }
 
+    .category-tag {
+        padding: 4px 8px;
+        font-size: 8px;
+        line-height: 8px;
+
+        &>i {
+            margin-left: 6px;
+        }
+    }
+
     .categories-list-modes {
         flex-direction: column;
         gap: 20px;
