--- a/src/static/css/categories.less
+++ b/src/static/css/categories.less
@@ -131,6 +131,10 @@
     input {
         margin-right: 16px;
     }
+
+    &>.sort-selection {
+        margin-left: auto;
+    }
 }
 
 .categories-list-main-category {
@@ -225,6 +229,14 @@
         span {
             font-size: 12px;
             line-height: 12px;
+        }
+
+        &>.sort-selection {
+            margin-left: initial;
+
+            span {
+                display: initial;
+            }
         }
     }
 
