service selection fix

--- a/src/static/css/categories.less
+++ b/src/static/css/categories.less
@@ -38,6 +38,22 @@
             color: #FFFFFF;
         }
     }
+
+    &.active {
+        background-color: #386BEE;
+
+        .category-tag-name {
+            color: #FFFFFF;
+        }
+
+        .category-tag-qty {
+            background-color: #F6F7FB;
+
+            span {
+                color: #386BEE;
+            }
+        }
+    }
 }
 
 .category-tag-input {
