--- a/src/static/css/services.css
+++ b/src/static/css/services.css
@@ -475,7 +475,11 @@
     line-height: 24px;
     color: #B3BBC2;
     text-align: center;
-    margin: 200px auto;
+    /* margin: 200px auto; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .services-list-not-found>i {
