--- a/src/static/css/ui.css
+++ b/src/static/css/ui.css
@@ -195,6 +195,11 @@
         line-height: 32px;
     }
 
+    .page-number-button {
+        font-size: 10px;
+        line-height: 10px;
+    }
+
     .popup-close-button {
         width: 12px;
         height: 12px;
