--- a/src/static/css/home.css
+++ b/src/static/css/home.css
@@ -207,6 +207,7 @@
 .home-articles-buttons>button {
     width: 32px;
     height: 32px;
+    line-height: 32px;
     border: 1px solid #386BEE;
     border-radius: 50%;
     background: none;
