--- a/src/static/css/ui.css
+++ b/src/static/css/ui.css
@@ -208,4 +208,10 @@
         font-size: 12px;
         line-height: 12px;
     }
+
+    .search-submit-button {
+        font-size: 16px;
+        margin-top: -29px;
+        margin-right: 20px;
+    }
 }
