--- a/src/static/css/services.css
+++ b/src/static/css/services.css
@@ -653,10 +653,12 @@
     /*! text-align: center; */
     z-index: 100;
     width: 800px;
+    height: 800px;
     box-sizing: border-box;
     display: grid;
     gap: 24px;
     justify-items: center;
+    overflow: auto;
 }
 
 
@@ -670,7 +672,7 @@
 .service-edit-details {
     display: grid;
     justify-items: flex-start;
-    gap: 12px;
+    gap: 24px;
 }
 
 .service-edit-info>input {
@@ -681,7 +683,7 @@
     font-weight: 400;
     font-size: 16px;
     line-height: 16px;
-    color: rgba(45, 67, 121, 0.6);
+    color: #2D4379;
     padding: 0 20px;
     height: 48px;
     box-sizing: border-box;
@@ -695,10 +697,10 @@
     font-weight: 400;
     font-size: 16px;
     line-height: 18px;
-    color: rgba(45, 67, 121, 0.6);
+    color: #2D4379;
     padding: 12px 20px;
     box-sizing: border-box;
-    height: 86px;
+    height: 200px;
     resize: none;
 }
 
@@ -709,21 +711,22 @@
 .service-edit-details input[type="text"] {
     border: 1px solid rgba(45, 67, 121, calc(0.6 * 0.4));
     border-radius: 12px;
-    padding: 2px 8px;
+    padding: 2px 10px;
     font-family: 'Noto Sans', sans-serif;
     font-style: normal;
     font-weight: 400;
-    font-size: 16px;
-    line-height: 16px;
-    color: rgba(45, 67, 121, 0.6);
+    font-size: 12pt;
+    line-height: 12pt;
+    color: #2D4379;
+    height: 30px;
 }
 
 .service-edit-details span,
 .service-edit-details p {
     font-weight: 400;
-    font-size: 16px;
-    line-height: 16px;
-    color: #2D4379;
+    font-size: 14px;
+    line-height: 14px;
+    color: rgba(45, 67, 121, 0.6);
 }
 
 .service-edit-popup-add-category-popup {
