--- a/src/static/css/feedback.css
+++ b/src/static/css/feedback.css
@@ -35,6 +35,7 @@
 .feedback-card-header>img {
     width: 64px;
     height: 64px;
+    border-radius: 50%;
 }
 
 .feedback-card-username {
@@ -158,6 +159,23 @@
     text-align: center;
     text-transform: uppercase;
     color: #1FB663;
+}
+
+.feedback-card-delete-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 24px;
+}
+
+.feedback-card-delete-container>button {
+    font-family: 'Noto Sans';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 14px;
+    color: #FF2038;
+    cursor: pointer;
 }
 
 /* FEEDBACK POPUP */
