--- a/src/static/css/global.css
+++ b/src/static/css/global.css
@@ -21,7 +21,7 @@ body {
     font-family: 'Noto Sans', sans-serif;
     font-style: normal;
     line-height: 1;
-    scrollbar-color: #386BEE #E9E7EA;
+    scrollbar-color: #AAD1FC #E9E7EA;
     scrollbar-width: thin;
 }
 
@@ -36,7 +36,7 @@ body {
 }
 
 ::-webkit-scrollbar-thumb {
-    background: #386BEE;
+    background: #AAD1FC;
     border-radius: 12px;
 }
 
