--- a/src/static/css/home.css
+++ b/src/static/css/home.css
@@ -60,6 +60,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    justify-content: flex-start;
     gap: 24px;
 }
 
@@ -485,7 +486,7 @@
     }
 
     .home-welcome-buttons {
-        flex-direction: column;
+        justify-content: center;
         gap: 12px;
     }
 
