services list pagination fix

--- a/src/static/css/ui.css
+++ b/src/static/css/ui.css
@@ -106,7 +106,8 @@
 
 .page-number-button.disabled {
     pointer-events: none;
-    filter: grayscale();
+    background: none;
+    color: #636E8D;
 }
 
 .popup-close-button {
