--- a/src/static/css/services.css
+++ b/src/static/css/services.css
@@ -3,6 +3,7 @@
 .service-card-link {
     text-decoration: none;
     border-radius: 12px;
+    color: #386BEE;
 }
 
 .service-card-container {
@@ -723,6 +724,7 @@
     font-size: 12pt;
     line-height: 12pt;
     color: #2D4379;
+    width: 300px;
     height: 30px;
 }
 
