--- a/src/static/css/services.css
+++ b/src/static/css/services.css
@@ -782,6 +782,12 @@
     margin-top: 16px;
 }
 
+.service-edit-alert {
+    font-size: 14px;
+    line-height: 14px;
+    color: #FF2038;
+}
+
 /* SERVICES LIST DROPDOWN */
 
 .services-list-dropdown-container {
