--- a/src/static/css/popup.less
+++ b/src/static/css/popup.less
@@ -18,7 +18,7 @@
     justify-items: center;
     gap: 24px;
 
-    .popup-add-category-form {
+    .popup-add-form {
         display: grid;
         gap: 16px;
 
