--- a/src/static/css/global.css
+++ b/src/static/css/global.css
@@ -319,19 +319,27 @@ hr {
 
 /* LOADER */
 
+.loader-container {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+}
+
 .loader {
-    border: 5px solid #555;
+    border: 5px solid #F4F7FF;
     -webkit-animation: spin 1s linear infinite;
     animation: spin 1s linear infinite;
-    border-top: 5px solid #f3f3f3;
+    border-top: 5px solid #386BEE;
     border-radius: 50%;
     width: 50px;
     height: 50px;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 100;
+    /* position: fixed; */
+    /* top: 50%; */
+    /* left: 50%; */
+    /* transform: translate(-50%, -50%); */
+    /* z-index: 100; */
 }
 
 @keyframes spin {
