search fix, search params link

--- a/src/static/css/global.css
+++ b/src/static/css/global.css
@@ -87,6 +87,10 @@ hr {
     color: #386BEE !important;
 }
 
+.color-green {
+    color: #1FB663 !important;
+}
+
 .cursor-pointer {
     cursor: pointer;
 }
